--- a/main.html
+++ b/main.html
@@ -1,16 +1,86 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+   <link rel="stylesheet" href="styls.css">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <!-- Bootstrap Validation form -->
+    <div class="nav"><h1>Intenship Form</h1></div>
+    <form class="row g-3 needs-validation" novalidate>
+        <div class="col-md-4">
+          <label for="validationCustom01" class="form-label">First Name</label>
+          <input type="text" class="form-control" id="first-name-input
+           required>
+          <div class="valid-feedback">
+            First name required!
+          </div>
+        </div>
+        <div class="col-md-4">
+          <label for="validationCustom02" class="form-label">Last nNme</label>
+          <input type="text" class="form-control" id="last-name-input"  required>
+          <div class="valid-feedback">
+            Last name required!
+          </div>
+        </div>
+        <div class="col-md-4">
+          <label for="validationCustomUsername" class="form-label">Email Address</label>
+          <!-- <div class="input-group has-validation"> -->
+            <!-- <span class="input-group-text" id="inputGroupPrepend">@</span> -->
+            <input type="text" class="form-control" id="email-input" aria-describedby="inputGroupPrepend" value="xyz@abc.com" required>
+            <div class="invalid-feedback">
+               Email required!
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <label for="validationCustom03" class="form-label">College</label>
+          <input type="text" class="form-control" id="college-input" required>
+          <div class="invalid-feedback">
+            Please provide a valid college.
+          </div>
+        </div>
+        <div class="col-md-3">
+          <label for="validationCustom04" class="form-label">Graduation Year</label>
+          <select class="form-select" id="graduation-input" required>
+            <option selected disabled value="">Choose...</option>
+            <option>2020</option>
+            <option>2021</option>
+            <option>2022</option>
+            <option>2023</option>
+          </select>
+          <div class="invalid-feedback">
+            Please select a valid Graduation Year.
+          </div>
+        </div>
+        <div class="col-md-3">
+          <label for="validationCustom05" class="form-label">Roll No.</label>
+          <input type="text" class="form-control" id="roll-no-input" required>
+          <div class="invalid-feedback">
+            Please provide a valid Roll no.
+          </div>
+        </div>
+        <div class="col-12">
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="conditions-checkbox" required>
+            <label class="form-check-label" for="invalidCheck">
+              Agree to terms and conditions
+            </label>
+            <div class="invalid-feedback">
+              You must agree before submitting.
+            </div>
+          </div>
+        </div>
+        <div class="col-12">
+          <button class="btn btn-primary" type="submit">Submit form</button>
+        </div>
+      </form>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
-
 </html>
